Improve css for overflows and fix dev profile on school computers

--- a/frontend/src/components/chat/ChanContent/ChanMsgs/ChanMsgs.module.css
+++ b/frontend/src/components/chat/ChanContent/ChanMsgs/ChanMsgs.module.css
@@ -25,7 +25,7 @@
 .msgs {
 	display: flex;
 	flex-direction: column-reverse;
-	overflow: scroll;
+	overflow-y: scroll;
 	gap: 10px;
 	margin-inline: 10px;
 }
